--- a/style.css
+++ b/style.css
@@ -683,6 +683,121 @@ footer .btn:active {
   background: #2230d2;
 }
 
+/* ============Mobile pop view========== */
+
+.pop-section {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  display: none;
+}
+
+.pop-section .pop-container {
+  margin: 2% 5% 2% 4%;
+  background: #fff;
+  border-radius: 20px;
+  position: relative;
+  max-height: 100%;
+  display: none;
+}
+
+.pop-section .pop-container.active {
+  display: inline-block;
+}
+
+.pop-container i {
+  right: 0;
+  position: absolute;
+  padding: 10px 10px 0 0;
+  cursor: pointer;
+}
+
+.pop-container h2 {
+  text-align: center;
+  font-size: 20px;
+}
+
+.pop-tech {
+  display: flex;
+  gap: 20px;
+  font-size: 14px;
+  justify-content: center;
+}
+
+.pop-container .canopy {
+  list-style-type: none;
+}
+
+.pop-container .preview-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pop-container .pop-pic {
+  width: 60%;
+  max-width: 100%;
+}
+
+.pop-info {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 15px;
+}
+
+.pop-info p {
+  margin: 0;
+  font-size: 14px;
+}
+
+.pop-view-2 {
+  display: flex;
+  flex-direction: column;
+}
+
+.pop-view-2 .pop2-lang {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  list-style: none;
+}
+
+.pop2-lang li {
+  background: #ebebff;
+  color: #6070ff;
+  margin: 0 auto;
+  border-radius: 8px;
+  padding: 2px 8px;
+  font-size: 12px;
+}
+
+.pop-button button {
+  display: flex;
+  gap: 5%;
+  padding: 5px 0 0 5px;
+}
+
+.pop-button .live-btn {
+  border: 2px solid #6070ff;
+  text-decoration: none;
+  border-radius: 6px;
+  color: #6070ff;
+  font-size: 12px;
+  padding: 4px 12px 4px 12px;
+}
+
+.msg.active {
+  font-size: 20px;
+  color: rgb(251, 140, 140);
+  text-align: center;
+}
+
+/* ======desktop media 768px min-width===== */
+
 @media screen and (min-width: 768px) {
   #toolbar {
     display: flex;
@@ -930,5 +1045,118 @@ footer .btn:active {
   .input-textarea {
     width: 400px;
     margin: 14px 0;
+  }
+
+  /*=============Popup Preview dsktp=========*/
+
+  .pop-section {
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-height: 100vh;
+    background: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    display: none;
+  }
+
+  .pop-section .pop-container {
+    margin: 10% 15% 10% 15%;
+    background: #fff;
+    border-radius: 20px;
+    position: relative;
+    display: none;
+    -webkit-overflow-scrolling: touch;
+    overflow: auto;
+    max-height: 500px;
+  }
+
+  .pop-section .pop-container.active {
+    display: inline-block;
+  }
+
+  .pop-container i {
+    right: 0;
+    position: absolute;
+    padding: 25px 20px 0 0;
+    cursor: pointer;
+  }
+
+  .pop-container h2 {
+    padding: 20px 0 0 40px;
+  }
+
+  .pop-tech {
+    display: flex;
+    gap: 20px;
+    padding: 0 0 30px 40px;
+  }
+
+  .pop-container .canopy {
+    list-style-type: none;
+  }
+
+  .pop-container .preview-img {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pop-container img {
+    width: 90%;
+  }
+
+  .pop-info {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    padding: 40px;
+  }
+
+  .pop-info p {
+    margin: 0;
+  }
+
+  .pop-view-2 {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pop-view-2 .pop2-lang {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10px;
+    list-style: none;
+  }
+
+  .pop2-lang li {
+    background: #ebebff;
+    color: #6070ff;
+    margin: 0 auto;
+    border-radius: 8px;
+    padding: 2px 8px;
+    font-size: 12px;
+  }
+
+  .pop-button {
+    display: flex;
+    gap: 5%;
+    padding: 10px 0 0 10px;
+  }
+
+  .pop-button .live-btn {
+    border: 2px solid #6070ff;
+    text-decoration: none;
+    border-radius: 6px;
+    color: #6070ff;
+    font-size: 12px;
+    padding: 4px 12px 4px 12px;
+  }
+
+  .msg.active {
+    font-size: 16px;
+    color: rgb(222, 119, 119);
+    font-weight: bold;
+    margin-top: 20px;
   }
 }
