--- a/style.css
+++ b/style.css
@@ -796,10 +796,12 @@ footer .btn:active {
 
 .pop-button button {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 5%;
-  padding: 5px 0 0 5px;
+  padding: 16px 20px;
   border-radius: 6px;
-  border: 2px solid #396df2;
+  border: 2px solid #6790f7;
 }
 
 .pop-button button a {
@@ -808,8 +810,9 @@ footer .btn:active {
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
-  padding: 5px 16px;
-  text-align: center;
+  text-align: start;
+  width: 84px;
+  height: 20px;
 }
 
 .pop-button {
@@ -819,7 +822,6 @@ footer .btn:active {
   gap: 15px;
   margin-top: 40px;
   padding: 8px;
-  height: ;
 }
 
 .pop-button .live-btn {
@@ -892,6 +894,18 @@ footer .btn:active {
     font-weight: 500;
     font-size: 15px;
     color: #344563;
+  }
+  nav ul li a {
+    color: #344563;
+    transition: all 0.3s ease-in-out;
+  }
+
+  nav ul li a:hover {
+    transform: scale(1.1);
+    background-color: #344563;
+    color: white;
+    border: 2px solid #ffffff;
+    border-radius: 4px;
   }
 
   .logo-nav {
@@ -1173,13 +1187,6 @@ footer .btn:active {
     flex-direction: column;
   }
 
-  .pop-view-2 .pop2-lang {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
-    list-style: none;
-  }
-
   .pop2-lang li {
     background: #ebebff;
     color: #6070ff;
@@ -1191,8 +1198,8 @@ footer .btn:active {
 
   .pop-button {
     display: flex;
-    gap: 5%;
-    padding: 10px 0 0 10px;
+    justify-content: center;
+    align-items: center;
   }
 
   .pop-button .live-btn {
