--- a/style.css
+++ b/style.css
@@ -81,6 +81,15 @@ nav ul li a {
   font-size: 12px;
 }
 
+.pop-tech li {
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 13px;
+  color: #7a869a;
+}
+
 .menu-bar ul li {
   padding: 20px 1px;
 }
@@ -103,6 +112,17 @@ nav ul li a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.pop-button button a {
+  text-decoration: none;
+  color: #396df2;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  text-align: start;
+  width: 84px;
+  height: 20px;
 }
 
 .menu-bar ul li a {
@@ -292,7 +312,6 @@ footer h2 {
   font-weight: 700;
   font-size: 32px;
   text-align: start;
-  font-size: 20px;
   margin: 14px 0 0 20px;
   color: #172b4d;
 }
@@ -746,15 +765,6 @@ footer .btn:active {
   margin: 14px 0 14px 20px;
 }
 
-.pop-tech li {
-  text-align: center;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 13px;
-  color: #7a869a;
-}
-
 .pop-container .canopy {
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -772,7 +782,6 @@ footer .btn:active {
 }
 
 .pop-container .pop-pic {
-  width: 60%;
   max-width: 90%;
   width: 100%;
 }
@@ -802,17 +811,6 @@ footer .btn:active {
   padding: 16px 20px;
   border-radius: 6px;
   border: 2px solid #6790f7;
-}
-
-.pop-button button a {
-  text-decoration: none;
-  color: #396df2;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  text-align: start;
-  width: 84px;
-  height: 20px;
 }
 
 .pop-button {
@@ -895,16 +893,21 @@ footer .btn:active {
     font-size: 15px;
     color: #344563;
   }
+
   nav ul li a {
     color: #344563;
     transition: all 0.3s ease-in-out;
+  }
+
+  .btn a {
+    transition: background-color 1s ease-in-out;
   }
 
   nav ul li a:hover {
     transform: scale(1.1);
     background-color: #344563;
     color: white;
-    border: 2px solid #ffffff;
+    border: 2px solid #fff;
     border-radius: 4px;
   }
 
@@ -1007,10 +1010,6 @@ footer .btn:active {
 
   .leftblock {
     flex: 1;
-  }
-
-  .btn a {
-    transition: background-color 1s ease-in-out;
   }
 
   #swap-pos {
