--- a/style.css
+++ b/style.css
@@ -730,7 +730,8 @@ footer .btn:active {
   top: 0;
   left: 0;
   min-height: 100vh;
-  background: rgba(0, 0, 0, 0.8);
+  background: rgba(193, 199, 208, 0.8);
+  backdrop-filter: blur(8px);
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -1112,7 +1113,8 @@ footer .btn:active {
     top: 0;
     left: 0;
     min-height: 100vh;
-    background: rgba(0, 0, 0, 0.8);
+    background: rgba(193, 199, 208, 0.8);
+    backdrop-filter: blur(8px);
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -1125,9 +1127,7 @@ footer .btn:active {
     border-radius: 20px;
     position: relative;
     display: none;
-    -webkit-overflow-scrolling: touch;
-    overflow: auto;
-    max-height: 500px;
+    max-height: 720px;
   }
 
   .pop-section .pop-container.active {
@@ -1146,13 +1146,13 @@ footer .btn:active {
     font-style: normal;
     font-weight: 700;
     font-size: 32px;
-    padding: 20px 0 20px 40px;
+    padding: 0 0 0 20px;
   }
 
   .pop-tech {
     display: flex;
-    gap: 20px;
-    padding: 0 0 30px 40px;
+    gap: 50px;
+    padding: 0 0 0 20px;
   }
 
   .pop-container .canopy {
@@ -1167,19 +1167,24 @@ footer .btn:active {
     display: flex;
     flex-direction: column;
     align-items: center;
+    max-width: 600px;
+    min-height: 300px;
   }
 
   .pop-info {
     display: grid;
     grid-template-columns: 60% 40%;
-    padding: 40px;
+    margin-left: 20px;
   }
 
   .pop-info p {
     margin: 0;
+    padding: 0;
   }
 
   .pop-view-2 {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
   }
@@ -1187,16 +1192,21 @@ footer .btn:active {
   .pop2-lang li {
     background: #ebebff;
     color: #6070ff;
-    margin: 0 auto;
     border-radius: 8px;
     padding: 2px 8px;
     font-size: 12px;
   }
 
   .pop-button {
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .pop-button button {
+    padding: 0;
+    margin: 0;
   }
 
   .pop-button .live-btn {
@@ -1205,13 +1215,13 @@ footer .btn:active {
     border-radius: 6px;
     color: #6070ff;
     font-size: 12px;
-    padding: 4px 12px 4px 12px;
+    /* padding: 4px 12px 4px 12px; */
   }
 
   .msg.active {
     font-size: 16px;
     color: rgb(222, 119, 119);
     font-weight: bold;
-    margin-top: 20px;
+    /* margin-top: 20px; */
   }
 }
