--- a/style.css
+++ b/style.css
@@ -69,10 +69,6 @@ nav ul li a {
   list-style-type: none;
 }
 
-.social-container li {
-  padding-right: 18px;
-}
-
 .primarytext li {
   display: flex;
   flex-direction: column;
@@ -161,18 +157,6 @@ nav ul li a {
   width: 327px;
 }
 
-.social-container img:hover {
-  background-color: #6070ff;
-  transition: 0.8s;
-  cursor: pointer;
-}
-
-.social-container img:active {
-  background-color: #2230d2;
-  transition: 0.8s;
-  cursor: pointer;
-}
-
 #lang img {
   position: relative;
   left: -3px;
@@ -253,6 +237,7 @@ footer h2 {
 .social-container {
   display: flex;
   margin: 5px 0;
+  gap: 20px;
   list-style-type: none;
 }
 
@@ -312,7 +297,7 @@ footer h2 {
 .languages h2 {
   font-style: normal;
   font-weight: 500;
-  font-size: 15px;
+  font-size: 16px;
   color: #253858;
 }
 
@@ -587,9 +572,10 @@ section .languages {
 }
 
 .lang-divs {
-  width: 303px;
+  /* width: 303px; */
   max-width: 100%;
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin-top: 10px;
 }
@@ -608,9 +594,11 @@ section .languages {
 }
 
 .lang-skills {
-  width: 303px;
+  /* width: 303px; */
   max-width: 100%;
   display: flex;
+  justify-content: space-between;
+  /* margin-top: 20px; */
   padding: 20px 0;
 }
 
@@ -620,18 +608,14 @@ section .languages {
   display: flex;
   align-items: center;
   color: #738da8;
-  padding-left: 50%;
+  /* padding-left: 50%; */
 }
 
 .fa-chevron-right {
-  padding-left: 46%;
+  /* padding-left: 46%; */
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   color: #738da8;
-}
-
-#skills-arrow {
-  padding-left: 70%;
 }
 
 footer {
@@ -874,8 +858,6 @@ footer .btn:active {
     width: 30px;
     height: 30px;
     padding: 0;
-    margin-top: -20px;
-    margin-left: -40px;
   }
 
   #toolbar nav img {
@@ -1063,15 +1045,15 @@ footer .btn:active {
   }
 
   .fa-chevron-right {
-    padding-left: 59%;
+    /* padding-left: 59%; */
   }
 
   .fa-chevron-down {
-    padding-left: 60%;
+    /* padding-left: 60%; */
   }
 
   #skills-arrow {
-    padding-left: 70%;
+    /* padding-left: 70%; */
   }
 
   .lang-row {
