--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+.close-icon {
+  color: white;
+  cursor: pointer;
+}
+
 #toolbar {
   padding: 0;
   margin: 0;
