--- a/style.css
+++ b/style.css
@@ -303,6 +303,10 @@ footer h2 {
   margin: 80px 0 0 0;
 }
 
+.letsConnect {
+  text-decoration: none;
+}
+
 .languages h2 {
   font-style: normal;
   font-weight: 500;
