--- a/style.css
+++ b/style.css
@@ -120,7 +120,6 @@ nav ul li a {
   align-items: center;
   padding: 12px;
   gap: 10px;
-  width: 124px;
   height: 48px;
   border: 1px solid #6070ff;
   border-radius: 8px;
@@ -269,6 +268,10 @@ footer h2 {
   background-color: #f7f7f9;
 }
 
+.work-button {
+  padding: 16px;
+}
+
 .work p {
   text-align: start;
   font-style: normal;
@@ -291,8 +294,12 @@ footer h2 {
 }
 
 .leftblock {
+  flex-direction: column;
+  display: flex;
   list-style: none;
   width: 100%;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .w3imgdt {
@@ -457,7 +464,6 @@ footer h2 {
   flex-direction: row;
   align-items: center;
   padding: 4px 8px;
-  width: 53px;
   background: #ebebff;
   border-radius: 8px;
 }
@@ -507,7 +513,6 @@ footer h2 {
 }
 
 .tags a h3 {
-  width: 29px;
   height: 16px;
   font-style: normal;
   font-weight: 500;
@@ -516,12 +521,6 @@ footer h2 {
   color: #3f478f;
   line-height: 16px;
   text-align: center;
-}
-
-.btn {
-  width: 100%;
-  height: 72px;
-  margin: 12px 2px;
 }
 
 .btn a h6 {
@@ -579,10 +578,10 @@ footer h2 {
   color: #172b4d;
 }
 
-section .languages {
+.languages {
   width: 100%;
   margin: 0;
-  padding: 26px;
+  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -609,11 +608,9 @@ section .languages {
 }
 
 .lang-seperators {
-  width: 327px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0 0 0 40px;
 }
 
 .lang-row {
@@ -642,7 +639,7 @@ section .languages {
 }
 
 footer {
-  margin: 60px 0 0 0;
+  margin-top: 60px;
   padding: 0;
   display: flex;
   flex-direction: column;
@@ -713,9 +710,7 @@ label {
 }
 
 .btn {
-  width: 50%;
   height: 16%;
-  padding: 0.75rem;
   font-style: normal;
   font-weight: 500;
   font-size: 17px;
@@ -727,13 +722,27 @@ label {
   text-align: center;
 }
 
-footer .btn:hover {
+.contact-btn {
+  padding: 16px;
+  height: 16%;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  color: #3a45a5;
+  background: #fff;
+  outline: none;
+  border: none;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.contact-btn:hover {
   background: #6070ff;
   border-radius: 8px;
   color: white;
 }
 
-footer .btn:active {
+.contact-btn:active {
   color: white;
   background: #2230d2;
 }
