--- a/style.css
+++ b/style.css
@@ -742,6 +742,17 @@ footer h2 {
   display: flex;
   align-items: center;
   color: #738da8;
+  transition: all 0.3s ease-in;
+  cursor: pointer;
+}
+
+.fa-chevron-right:hover {
+  color: #6070ff;
+  transform: rotateZ(90deg);
+  background-color: white;
+  box-shadow: 2px 5px 20px 4px rgb(96, 112, 255, 0.6);
+}
+
 }
 
 .contact-me {
